Remove unnecessary escapes

--- a/bench/templates/complex.handlebars
+++ b/bench/templates/complex.handlebars
@@ -5,7 +5,7 @@
       {{#if current}}
         <li><strong>{{name}}</strong></li>
       {{^}}
-        <li><a href=\"{{url}}\">{{name}}</a></li>
+        <li><a href="{{url}}">{{name}}</a></li>
       {{/if}}
     {{/each}}
   </ul>
